--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1&http2"
     }
-  }
+  },
+  "Urls": "http://*:5100"
 }
