Its dome and finsihe!!!

--- a/GrpcServiceForAngular.csproj
+++ b/GrpcServiceForAngular.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Protobuf Include="Protos\AdLookupProto.proto" />
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\Database.proto" />
 	</ItemGroup>
