--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http1&http2"
+      "Protocols": "Http1&Http2"
     }
   },
   "Urls": "http://*:27385"
