--- a/GrpcServiceForAngular.csproj
+++ b/GrpcServiceForAngular.csproj
@@ -10,11 +10,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <OutputPath>C:\Users\andi0137\Desktop\SoScinceBulidResult\AngularServiceGrpc\</OutputPath>
+	  <OutputPath>bin\</OutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\AdLookupProto.proto" GrpcServices="Both" />
+		<Protobuf Include="Protos\AdLookupProto.proto" />
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\Database.proto" />
 	</ItemGroup>
