--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
-      "Protocols": "Http1&Http2"
+      "Protocols": "Http2"
     }
   },
-  "Urls": "http://*:27385"
+  "Urls": "https://*:27385"
 }
