--- a/GrpcServiceForAngular.csproj
+++ b/GrpcServiceForAngular.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="Grpc.AspNetCore" Version="2.37.0" />
 		<PackageReference Include="Grpc.AspNetCore.Web" Version="2.37.0" />
 		<PackageReference Include="Grpc.Net.Client.Web" Version="2.37.0" />
+		<PackageReference Include="SSH.NET" Version="2020.0.1" />
 	</ItemGroup>
 
 </Project>
