--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,15 @@
   },
   "AllowedHosts": "*",
   "Kestrel": {
+    "Endpoints": {
+      "HttpsInlineCertAndKeyFile": {
+        "Url": "https://*:27385",
+        "Certificate": {
+          "Path": "/home/SoScienceUser/soscience_ssl_certificate/soscience.dk.crt",
+          "KeyPath": "/home/SoScienceUser/soscience_ssl_certificate/soscience.dk.key"
+        }
+      }
+    },
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
