--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "GRPC_DEFAULT_SSL_ROOT_FILE_PATH": "/home/SoScienceUser/soscience_ssl_certificate/soscience.dk.crt"
+        "GRPC_DEFAULT_SSL_ROOT_FILE_PATH": "/home/SoScienceUser/soscience_ssl_certificate/soscience.dk.ca-bundle"
       }
     }   
   }
