A whole lot of changes. Https should be working without problems now.

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "GrpcServiceForAngular": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "GRPC_DEFAULT_SSL_ROOT_FILE_PATH": "/home/SoScienceUser/soscience_ssl_certificate/soscience.dk.crt"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }   
   }
