--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,19 @@
     }
   },
   "AllowedHosts": "*",
-  "Kestrel": {
+  "Kestrel": {/*
+    "Endpoints": {
+      "HttpsInlineCertAndKeyFile": {
+        "Url": "https://*:27385",
+        "Certificate": {
+          "Path": "C:/Users/anto6789/SoScience/SoScienceCerts/soscience.dkfull.ca-bundle",
+          "KeyPath": "C:/Users/anto6789/SoScience/SoScienceCerts/soscience.dk.key"
+        }
+      }
+    },*/
     "EndpointDefaults": {
-      "Protocols": "Http2"
+      "Protocols": "Http1AndHttp2"
     }
   },
-  "Urls": "https://*:27385"
+  "Urls": "http://*:27385"
 }
