--- a/GrpcServiceForAngular.csproj
+++ b/GrpcServiceForAngular.csproj
@@ -15,6 +15,7 @@
 
 	<ItemGroup>
 	  <None Remove="Protos\MockupProto.proto" />
+	  <None Remove="Protos\RemoteMediaProto.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -22,6 +23,7 @@
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\Database.proto" />
 		<Protobuf Include="Protos\MockupProto.proto" />
+		<Protobuf Include="Protos\RemoteMediaProto.proto" />
 	</ItemGroup>
 
 	<ItemGroup>
