Modified RemoteMedia.proto: changed UserDbInformation to ProjectInformation

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Kestrel": {/*
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": null
+    },
+    /*
     "Endpoints": {
       "HttpsInlineCertAndKeyFile": {
         "Url": "https://*:27385",
